<resources>
    <string name="Kickback">Kickback.</string>
    <string name="Friends">My Friends</string>
    <string name="Schedule">Schedule</string>
    <string name="Settings">Settings</string>
    <string name="Add_New_Kickback">Add</string>
    <string name="search">Search</string>
    <string name="add_friend">Add Friend</string>
    <string name="account_info">Account Settings</string>
    <string name="privacy_info">Privacy Settings</string>
    <string name="advanced_info">Advanced Settings</string>
    <string name="logout">Logout</string>
    <string name="more_info">More Information</string>
    <string name="logout_confirmation">Are you sure you want to logout?</string>
    <string name="confirm">Yes</string>
    <string name="cancel">No</string>
    <string name="friend_manager">Make New Friends</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="create_account">Create Account</string>
    <string name="or"><u>OR</u></string>
    <string name="title_activity_kickback_list">Fellow Kickbackers</string>
    <string name="title_activity_kickback_schedule">Schedule</string>
    <string name="title_activity_home">Kickback.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_account_settings">Account Settings</string>
    <string name="title_activity_privacy_settings">Privacy Settings</string>
    <string name="title_activity_advanced_settings">Advanced Settings</string>
    <string name="title_activity_more_information">More Information</string>
    <string name="title_activity_notification_settings">Notification Settings</string>
    <string name="title_activity_my_friends">My Friends</string>
    <string name="title_activity_splash_screen">Kickback</string>
    <string name="title_activity_terms_of_service">Terms Of Service</string>
    <string name="title_activity_privacy_policy">Privacy Policy</string>
    <string name="title_activity_add_kickback">Add New Kickback</string>
    <string name="title_activity_add_friend">Find Friends</string>
    <string name="title_tab_add_friend">ADD FRIENDS</string>
    <string name="title_tab_friend_requests">FRIEND REQUESTS</string>
    <string name="colon">:</string>
    <string name="am">am</string>
    <string name="pm">pm</string>
    <string name="add_kickback_activity_date">Date</string>
    <string name="add_kickback_activity_time">Time</string>
    <string name="add_kickback_activity_start_time">Start Time</string>
    <string name="add_kickback_activity_end_time">End Time</string>
    <string name="add_kickback_activity_location">Location</string>
    <string name="add_kickback_activity_submit">Add</string>
    <string name="add_kickback_activity_cancel">Cancel</string>
    <string-array name="hours">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string name="sign_up_text">By creating an account, you agree to the Terms of Use and acknowledge that you have read the Privacy Policy.</string>
    <string-array name="minutes">
        <item>00</item>
        <item>15</item>
        <item>30</item>
        <item>45</item>
    </string-array>
    <string name="month">Month</string>
    <string-array name="months">
        <item>Error loading months</item>
    </string-array>
    <string-array name="day">
        <item>Error loading days</item>
    </string-array>
    <string name="dash">-</string>
    <string name="friendlist_favorites">FAVORITES</string>
    <string name="friendlist_friend">FRIENDS</string>
    <string name="large_sample_text">Phasellus mollis justo vel lectus tincidunt, at efficitur mi volutpat. Etiam eleifend diam ac erat bibendum, aliquet porttitor lacus dictum. Morbi bibendum lectus lectus, vel hendrerit est interdum ac. Mauris et eros sagittis, faucibus nisi sit amet, volutpat nulla. Sed vitae lobortis neque. Nunc quis tempus erat, ut sagittis leo. Ut rutrum tortor rhoncus luctus consectetur. Maecenas quis odio laoreet, scelerisque ex efficitur, auctor quam. Proin mollis elementum sapien.

Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed hendrerit, urna efficitur posuere luctus, arcu felis pharetra erat, vitae fermentum quam quam sed nibh. Proin pharetra nibh imperdiet, scelerisque sapien vitae, auctor lorem. Sed rutrum malesuada mi eget posuere. Phasellus dui massa, porttitor et mi quis, porta lacinia ex. Etiam dapibus enim dolor, ac imperdiet augue pellentesque ac. Donec urna mauris, volutpat nec vehicula non, pharetra non nunc.

Nulla euismod malesuada dolor quis mollis. Aliquam erat volutpat. Aliquam eu vulputate ligula, in tincidunt arcu. Maecenas ut magna in lorem laoreet rutrum nec sit amet nisl. Phasellus lorem mi, hendrerit eu quam eget, placerat vestibulum quam. Aliquam sem magna, viverra at ultricies dignissim, maximus vitae felis. Fusce lacinia velit ut turpis bibendum viverra. Phasellus feugiat scelerisque justo, eu finibus diam facilisis eget. Vivamus condimentum, mi id sodales tristique, risus purus vehicula arcu, sed imperdiet lorem est blandit nisl. Curabitur a sapien dictum purus elementum rhoncus. Vivamus sodales, neque a viverra vulputate, ligula neque imperdiet est, id hendrerit nulla mauris quis mauris. Phasellus ut ante bibendum, dignissim elit nec, vulputate purus. Curabitur tempor mi at vulputate placerat. Aenean mollis iaculis odio, et convallis quam finibus id. Proin et lectus et nulla scelerisque pharetra.

Quisque placerat feugiat lectus, ac lobortis felis sodales vitae. Sed convallis ultricies arcu in commodo. Duis vel est in odio rutrum varius. Phasellus rutrum ornare congue. Duis eget aliquam tellus. Praesent sed nibh aliquet dolor lobortis lacinia. Vivamus cursus arcu ut ante varius, a sagittis nibh aliquam. Donec eu tortor molestie, porta nunc feugiat, fermentum justo. Nam dignissim bibendum porta. Ut et dolor malesuada, maximus felis sit amet, facilisis eros. Duis efficitur euismod justo, nec pellentesque lacus accumsan nec. Phasellus tempus scelerisque malesuada. Curabitur est diam, laoreet quis rutrum accumsan, dignissim at sapien. Nullam commodo, mauris vel eleifend finibus, eros nulla condimentum libero, ac mollis purus ligula in felis. Duis venenatis tempus dui in malesuada.

Donec porta odio a ex sagittis tempus. Etiam blandit diam a elit blandit consectetur. Aliquam eget ultrices leo. Suspendisse potenti. Curabitur sollicitudin magna elit, vitae finibus libero consectetur ut. Duis efficitur nisl vel felis porta interdum. Nullam ultrices nunc magna, vel condimentum ligula ullamcorper quis. In vestibulum, arcu sit amet ullamcorper consequat, nisl eros cursus est, aliquam fringilla felis ipsum facilisis magna. Suspendisse pharetra risus ac mollis finibus. Vestibulum lobortis sem enim, eget pellentesque ipsum convallis a. Duis molestie augue sit amet pretium placerat. Curabitur in dolor et est sagittis tincidunt eu venenatis tortor. In sapien orci, tempor non nisl dignissim, bibendum luctus velit. Fusce vitae tellus erat. Nulla semper luctus elit. Nulla hendrerit laoreet consectetur.</string>
    <string name="title_activity_add_friend_from_contacts">AddFriendFromContacts</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_friend_requests">FriendRequests</string>
    <string name="server_hostname">stevex86.com</string>
    <string name="server_port">8080</string>
    <string name="title_activity_account_portal">AccountPortal</string>
</resources>