<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.junipertech.kickback.Settings">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:weightSum="12">


            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/fullwidtchbutton"
                android:text="@string/account_info"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:id="@+id/account_settings"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/fullwidtchbutton"
                android:text="@string/privacy_info"
                android:id="@+id/privacy_settings"
                android:gravity="left|center_vertical"
                android:layout_weight="1"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/fullwidtchbutton"
                android:text="@string/advanced_info"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:id="@+id/advanced_settings"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/fullwidtchbutton"
                android:text="@string/logout"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:id="@+id/logout" />
        </LinearLayout>

</RelativeLayout>
