<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/white"
    tools:context="com.juniper.kickback.activities.AddKickback">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/list_activity_horizontal_margin"
        android:paddingRight="@dimen/list_activity_horizontal_margin"
        android:paddingTop="@dimen/list_activity_vertical_margin"
        android:paddingBottom="@dimen/list_activity_vertical_margin"
        android:orientation="vertical"
        android:weightSum="5">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/list_activity_horizontal_margin"
            android:paddingRight="@dimen/list_activity_horizontal_margin"
            android:paddingTop="@dimen/list_activity_vertical_margin"
            android:paddingBottom="@dimen/list_activity_vertical_margin"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="left|center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_kickback_activity_date"
                android:ems="4"/>
            <Spinner
                android:id="@+id/months_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/months"
                android:prompt="@string/month" />
            <Spinner
                android:id="@+id/day_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/day"
                android:prompt="@string/day"/>
            <Spinner
                android:id="@+id/year_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:prompt="@string/year"/>
        </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/list_activity_horizontal_margin"
            android:paddingRight="@dimen/list_activity_horizontal_margin"
            android:paddingTop="@dimen/list_activity_vertical_margin"
            android:paddingBottom="@dimen/list_activity_vertical_margin"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="left|center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_kickback_activity_start_time"
                android:ems="4"/>
            <Spinner
                android:id="@+id/start_time_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/hours"
                android:prompt="@string/hours"
                android:layout_marginLeft="25dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colon"/>
            <Spinner
                android:id="@+id/start_time_minutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/minutes"
                android:prompt="@string/minutes"/>
            <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/start_ampm_toggle"
                android:textOff="@string/am"
                android:textOn="@string/pm"
                android:textColor="@color/white"
                android:background="@drawable/button_shape"
                android:onClick="startTimeToggle"
                android:layout_marginLeft="25dp"/>
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/list_activity_horizontal_margin"
            android:paddingRight="@dimen/list_activity_horizontal_margin"
            android:paddingTop="@dimen/list_activity_vertical_margin"
            android:paddingBottom="@dimen/list_activity_vertical_margin"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="left|center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_kickback_activity_end_time"
                android:ems="4"/>
            <Spinner
                android:id="@+id/end_time_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/hours"
                android:prompt="@string/hours"
                android:layout_marginLeft="25dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colon"/>
            <Spinner
                android:id="@+id/end_time_minutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/minutes"
                android:prompt="@string/minutes"/>
            <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/end_ampm_toggle"
                android:textOff="@string/am"
                android:textOn="@string/pm"
                android:textColor="@color/white"
                android:background="@drawable/button_shape"
                android:onClick="endTimeToggle"
                android:layout_marginLeft="25dp"/>
        </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/list_activity_horizontal_margin"
            android:paddingRight="@dimen/list_activity_horizontal_margin"
            android:paddingTop="@dimen/list_activity_vertical_margin"
            android:paddingBottom="@dimen/list_activity_vertical_margin"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="left|center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_kickback_activity_location"
                android:ems="4"/>

            <EditText
                android:id="@+id/activity_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:singleLine="true"/>
        </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/list_activity_horizontal_margin"
            android:paddingRight="@dimen/list_activity_horizontal_margin"
            android:paddingTop="@dimen/list_activity_vertical_margin"
            android:paddingBottom="@dimen/list_activity_vertical_margin"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_weight="1"
            android:gravity="left|center_vertical">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="9dp"
                android:paddingRight="9dp"
                android:background="@drawable/full_width_selector"
                android:text="@string/add_kickback_activity_submit"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:id="@+id/add_kickback"
                android:onClick="addNewKickback"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="9dp"
                android:paddingRight="9dp"
                android:background="@drawable/full_width_selector"
                android:text="@string/add_kickback_activity_cancel"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:id="@+id/cancel_action"
                android:onClick="cancelKickback"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
